{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 169,
  "lineage": "d2227ef9-4d3e-c1d0-1df4-9008b75ee52d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:listener/app/webserver-alb/ba09eaac77ebfd92/71f29ec246ecab05",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:targetgroup/wordpress-tg-a/cc5a2447f57d315e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:listener/app/webserver-alb/ba09eaac77ebfd92/71f29ec246ecab05",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:loadbalancer/app/webserver-alb/ba09eaac77ebfd92",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet_ids.subnets",
            "module.sg_alb.aws_security_group.sg",
            "module.wordpress_alb.aws_lb.this",
            "module.wordpress_alb.aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:targetgroup/wordpress-tg-a/cc5a2447f57d315e",
                        "weight": 50
                      },
                      {
                        "arn": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:targetgroup/wordpress-tg-b/0c5567921f73a3da",
                        "weight": 50
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:listener-rule/app/webserver-alb/ba09eaac77ebfd92/71f29ec246ecab05/6a45ef5fbe6252d1",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:listener-rule/app/webserver-alb/ba09eaac77ebfd92/71f29ec246ecab05/6a45ef5fbe6252d1",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:listener/app/webserver-alb/ba09eaac77ebfd92/71f29ec246ecab05",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_listener.alb_listener",
            "data.aws_subnet_ids.subnets",
            "module.sg_alb.aws_security_group.sg",
            "module.wordpress_alb.aws_lb.this",
            "module.wordpress_alb.aws_lb_target_group.main"
          ]
        }
      ]
    },
    {
      "module": "module.instance_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:532773623179:security-group/sg-0fcfa5bb810c7be39",
            "description": "security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fcfa5bb810c7be39",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              }
            ],
            "name": "webserver-sg",
            "name_prefix": "",
            "owner_id": "532773623179",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group"
            },
            "tags_all": {
              "Name": "security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-8fc334e4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.rds_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:532773623179:security-group/sg-04fe3fd9024ef58af",
            "description": "security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04fe3fd9024ef58af",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_mysql_sg",
            "name_prefix": "",
            "owner_id": "532773623179",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group"
            },
            "tags_all": {
              "Name": "security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-8fc334e4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.sg_alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:532773623179:security-group/sg-046310d7de7e18d97",
            "description": "security-group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-046310d7de7e18d97",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "532773623179",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group"
            },
            "tags_all": {
              "Name": "security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-8fc334e4"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.wordpress_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:loadbalancer/app/webserver-alb/ba09eaac77ebfd92",
            "arn_suffix": "app/webserver-alb/ba09eaac77ebfd92",
            "dns_name": "webserver-alb-490754312.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:loadbalancer/app/webserver-alb/ba09eaac77ebfd92",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webserver-alb",
            "security_groups": [
              "sg-046310d7de7e18d97"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-9be2a0d7"
              },
              {
                "subnet_id": "subnet-bf1c00d7"
              },
              {
                "subnet_id": "subnet-c579edbe"
              }
            ],
            "subnets": [
              "subnet-9be2a0d7",
              "subnet-bf1c00d7",
              "subnet-c579edbe"
            ],
            "tags": {
              "Name": "Wordpress Application Load Balancer"
            },
            "tags_all": {
              "Name": "Wordpress Application Load Balancer"
            },
            "vpc_id": "vpc-8fc334e4",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.sg_alb.aws_security_group.sg",
            "data.aws_subnet_ids.subnets"
          ]
        }
      ]
    },
    {
      "module": "module.wordpress_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:targetgroup/wordpress-tg-a/cc5a2447f57d315e",
            "arn_suffix": "targetgroup/wordpress-tg-a/cc5a2447f57d315e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:targetgroup/wordpress-tg-a/cc5a2447f57d315e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tg-a",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-8fc334e4"
          },
          "dependencies": [
            "module.sg_alb.aws_security_group.sg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:targetgroup/wordpress-tg-b/0c5567921f73a3da",
            "arn_suffix": "targetgroup/wordpress-tg-b/0c5567921f73a3da",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:532773623179:targetgroup/wordpress-tg-b/0c5567921f73a3da",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-tg-b",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-8fc334e4"
          },
          "dependencies": [
            "module.sg_alb.aws_security_group.sg"
          ]
        }
      ]
    }
  ]
}